portal-ui-shell/k8_ymls/infra/shoppingportal_ns.yml
apiVersion: v1
kind: Namespace
metadata:
    name: shoppingportal
    labels:
       name: shoppingportal
